--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "html": "^1.0.0",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "passport-local": "^1.0.0"
   }
 }
