--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Ceasar Kwadwo <ceasarkwadwo@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "html": "^1.0.0",
@@ -23,8 +24,9 @@
     "node-postgres": "^0.6.2",
     "nodemon": "^2.0.13",
     "openssl": "^1.1.0",
+    "passport": "^0.5.0",
     "passport-local": "^1.0.0",
-    "pg-x": "^1.0.0",
-    "pg": "^8.7.0"
+    "pg": "^8.7.1",
+    "pg-x": "^1.0.0"
   }
 }
