--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "html": "^1.0.0",
     "node-emoji": "^1.11.0",
     "node-postgres": "^0.6.2",
