--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookie-parser": "^1.4.5",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-passport-logout": "^0.1.0",
     "express-session": "^1.17.2",
     "html": "^1.0.0",
     "node-emoji": "^1.11.0",
