--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "html": "^1.0.0",
     "node-emoji": "^1.11.0",
     "node-postgres": "^0.6.2",
+    "nodemailer": "^6.7.0",
     "nodemon": "^2.0.13",
     "openssl": "^1.1.0",
     "passport": "^0.5.0",
